--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animais Fantásticos</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -20,7 +26,7 @@
     </nav>
     <section class="grid-section animais" id="animais">
         <h1 class="titulo">Animais Fantásticos</h1>
-        <ul>
+        <ul class="animais-lista">
             <li><img src="img/imagem1.jpg" alt="Raposa olhando para cima"></li>
             <li><img src="img/imagem2.jpg" alt="Esquilo amarelo olhando para câmera com o fundo escuro"></li>
             <li><img src="img/imagem3.jpg"
@@ -29,7 +35,6 @@
             <li><img src="img/imagem4.jpg" alt="Lobo cinza com fundo escuro"></li>
             <li><img src="img/imagem5.jpg" alt="Macaco olhando para o lado "></li>
             <li><img src="img/imagem6.jpg" alt="Leão"></li>
-            <li><img src="img/mapa.png" alt="Mapa"></li>
         </ul>
         <div class="animais-descricao">
             <section>
@@ -60,7 +65,7 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum expedita iste est?</p>
             </section>
             <section>
-                <h2>Macaco</h2>
+                <h2>Macac</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere repudiandae, ex ullam, vitae ab iste
                     eos beatae tenetur magni delectus minus, et laboriosam quasi vero!</p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum expedita iste est?</p>
@@ -75,8 +80,8 @@
     </section>
 
     <section class="grid-section faq" id="faq">
-        <h1>FAQ</h1>
-        <dl>
+        <h1 class="titulo">FAQ</h1>
+        <dl class="faq-lista">
             <dt>Qual a idade dos animais?</dt>
             <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte
                 médio, caracterizados por um focinho comprido e uma cauda longa e peluda.
@@ -94,8 +99,22 @@
                 felídeos.</dd>
         </dl>
     </section>
+<section class="grid-section contato" id="contato">
+    <h1 class="titulo">Contato</h1>
+  <div class="mapa">
+    <img src="./img/mapa.png" alt="Mapa">
+  </div>
+  <ul class="dados">
+    <li>juliashizuko66@gmail.com</li>
+    <li>+55 (11) 9999-9999 </li>
+    <li>Rua do Conde, n12</li>
+    <li>São Paulo - SP</li>
 
-
+  </ul>
+</section>
+<footer class="copy">
+    <p>Alguns direitos reservados.</p>
+</footer>
     <script src="./script.js"></script>
 </body>
 
